@@ -682,6 +682,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8623. Refactor NameNode handling of invalid, corrupt, and under-recovery
     blocks. (Zhe Zhang via jing9)
 
+    HDFS-8653. Code cleanup for DatanodeManager, DatanodeDescriptor and
+    DatanodeStorageInfo. (Zhe Zhang via wang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
